--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -167,7 +167,7 @@
 .footer-col-2 {
   width: -webkit-calc(60% - (#{$spacing-unit} / 2));
   width:         calc(60% - (#{$spacing-unit} / 2));
-  color: $grey-color-light;
+  color: $grey-color;
 }
 
 
